Added portfolio  work  upto 14th September

--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Indrajit_Paul_Portfolio</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <h1>Hello</h1>
+    <div id="navbar">
+        <div>
+            <div><h1> < Indrajit / > </h1></div>
+        </div>
+        <div>
+            <div><p>HOME</p></div>
+            <div><p>ABOUT</p></div>
+            <div><p>SKILLS</p></div>
+            <div><p>PROJECTS</p></div>
+            <div><p>CONTACT</p></div>
+        </div>
+        <!-- <img src="./moon.png" alt="" id="icon"> -->
+    </div>
+    <div id="about">
+        <div>
+            <h2>Hi 👋, my name is</h2>
+            <h1 id="name">Indrajit Paul</h1>
+            <h2>I'm a <span id="title">Java Backend Developer.</span></h2>
+            <button><a id="resume" href="./Indrajit_Paul_Resume.pdf" target="_blank">Resume</a></button>
+            <div>
+                <img src="./icons8-github-64 (1).png" alt="" id="icon2">
+                <img src="./icons8-linkedin-circled-50.png" alt="" id="icon3">
+            </div>
+        </div>
+        <div>
+            <div id="picborder">
+                <div id="pic">
+                    <img src="./pic.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+<script src="index.js"></script>
