--- a/index.html
+++ b/index.html
@@ -32,8 +32,18 @@
             <h2>I'm a <span id="title">Java Backend Developer.</span></h2>
             <button><a id="resume" href="./Indrajit_Paul_Resume.pdf" target="_blank">Resume</a></button>
             <div>
-                <img src="./icons8-github-64 (1).png" alt="" id="icon2">
-                <img src="./icons8-linkedin-circled-50.png" alt="" id="icon3">
+                <div class="tooltip">
+                    <img src="./icons8-github-64 (1).png" alt="" id="icon2">
+                    <span class="tooltiptext">https://github.com/ipaul1996</span>
+                </div>
+                <div class="tooltip">
+                    <img src="./icons8-linkedin-circled-50.png" alt="" id="icon3">
+                    <span class="tooltiptext">https://www.linkedin.com/in/indrajitpaul1996/</span>
+                </div>
+                <div class="tooltip">
+                    <img src="./icons8-gmail-logo-64.png" alt="" id="icon4">
+                    <span class="tooltiptext">mail to:indraindrani1999@gmail.com</span>
+                </div>
             </div>
         </div>
         <div>
