Added work of 15th September

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
             <div><h1> < Indrajit / > </h1></div>
         </div>
         <div>
-            <div><p>HOME</p></div>
-            <div><p>ABOUT</p></div>
-            <div><p>SKILLS</p></div>
-            <div><p>PROJECTS</p></div>
-            <div><p>CONTACT</p></div>
+            <div id="home"> <p>HOME</p></div>
+            <div id="ab"><p>ABOUT</p></div>
+            <div id="sk"><p>SKILLS</p></div>
+            <div id="pr"><p>PROJECTS</p></div>
+            <div id="con"><p>CONTACT</p></div>
         </div>
-        <!-- <img src="./moon.png" alt="" id="icon"> -->
     </div>
     <div id="about">
         <div>
@@ -32,17 +31,42 @@
             <h2>I'm a <span id="title">Java Backend Developer.</span></h2>
             <button><a id="resume" href="./Indrajit_Paul_Resume.pdf" target="_blank">Resume</a></button>
             <div>
-                <img src="./icons8-github-64 (1).png" alt="" id="icon2">
-                <img src="./icons8-linkedin-circled-50.png" alt="" id="icon3">
-                <img src="./icons8-gmail-logo-64.png" alt="" id="icon4">
+                <img src="./Images/icons8-github-64 (1).png" alt="" id="icon2">
+                <img src="./Images/icons8-linkedin-circled-50.png" alt="" id="icon3">
+                <a href="mailto:indraindrani1999@gmail.com">
+                    <img src="./Images/icons8-gmail-logo-64.png" alt="" id="icon4">
+                </a>
             </div>
         </div>
         <div>
             <div id="picborder">
                 <div id="pic">
-                    <img src="./pic.png" alt="">
+                    <img src="./Images/pic.png" alt="">
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div id="aboutme">
+        <h2>About Me</h2>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, atque illum! Sit, itaque distinctio voluptatum architecto ullam, incidunt vel debitis atque minus facilis accusamus non natus asperiores consequuntur. Earum neque fuga labore amet ipsum aliquid quam assumenda cumque voluptates odit?</p>
+        </div>
+    </div>
+    <div id="skills">
+        <h2>My Skills</h2>
+        <div id="row1">
+            <div><img src="./Images/Java.png" alt=""></div>
+            <div><img src="./Images/Spring.png" alt=""></div>
+            <div><img src="./Images/Hibernate.png" alt=""></div>
+            <div><img src="./Images/MYSQL.png" alt=""></div>
+            <div><img src="./Images/AWS.jpg" alt=""></div>
+        </div>
+        <div id="row2">
+            <div><img src="./Images/HTML.jpg" alt=""></div>
+            <div><img src="./Images/CSS.jpg" alt=""></div>
+            <div><img src="./Images/JS.png" alt=""></div>
+            <div><img src="./Images/Git.png" alt=""></div>
         </div>
     </div>
 </body>
