--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
     <div id="aboutme">
         <h2>About Me</h2>
         <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, atque illum! Sit, itaque distinctio voluptatum architecto ullam, incidunt vel debitis atque minus facilis accusamus non natus asperiores consequuntur. Earum neque fuga labore amet ipsum aliquid quam assumenda cumque voluptates odit?</p>
+            <p>Aspiring Java Backend developer, a lifelong learner,
+                dedicated to providing user-centric solutions.
+                Innovative, collaborative, team player driven to deliver
+                the best in any situation. Looking for a Software
+                Developer position in a product-based or servicebased company.</p>
         </div>
     </div>
     <div id="skills">
