Updated skils section, Worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   rel="stylesheet"
   href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
 />
+
 </head>
 <body>
     <div id="navbar">
@@ -64,18 +65,27 @@
         <h2>Technical Skills</h2>
         <h3 class="tech">BACKEND</h3>
         <div id="row1">
-            <div><img src="./Images/Java.png" alt=""></div>
-            <div><img src="./Images/Spring.png" alt=""></div>
-            <div><img src="./Images/Hibernate.png" alt=""></div>
-            <div><img src="./Images/MYSQL.png" alt=""></div>
-            <div><img src="./Images/AWS.jpg" alt=""></div>
-            <div><img src="./Images/Git.png" alt=""></div>
+            <div><img src="https://icongr.am/devicon/java-original.svg?size=256&color=f06429" alt=""> 
+                <div><h2 style="color:white;margin-top: 35px;">Java</h2></div> </div>
+            <div><img src="./Images/Spring.png" alt="" id="spr">
+                <div><h2 style="color:white;margin-top: 35px;">Spring</h2></div></div>
+            <div><img src="./Images/Hibernate.png" alt="" id="hiber">
+                <div><h2 style="color:white;margin-top: 35px;">Hibernate</h2></div></div>
+            <div><img src="https://icongr.am/devicon/mysql-original.svg?size=128&color=f06429" alt="">
+                <div><h2 style="color:white;margin-top: 35px;">Mysql</h2></div></div>
+            <div><img src="https://img.icons8.com/windows/256/FFFFFF/amazon-web-services.png" alt="">
+                <div><h2 style="color:white;margin-top: 35px;">Aws</h2></div></div>
+            <div><img src="https://img.icons8.com/ios-filled/256/f06429/git.png" alt="">
+                <div><h2 style="color:white;margin-top: 35px;">Git</h2></div></div>
         </div>
         <h3 class="tech">FRONTEND</h3>
         <div id="row2">
-            <div><img src="./Images/HTML.jpg" alt=""></div>
-            <div><img src="./Images/CSS.jpg" alt=""></div>
-            <div><img src="./Images/JS.png" alt=""></div>
+            <div><img src="https://img.icons8.com/color/480/000000/html-5--v1.png" alt="">
+                <div><h2 style="color:white;margin-top: 15px;">HTML</h2></div></div>
+            <div><img src="https://img.icons8.com/color/500/000000/css3.png" alt="">
+                <div><h2 style="color:white;margin-top: 15px;">CSS</h2></div></div>
+            <div><img src="https://img.icons8.com/color/480/000000/javascript--v1.png" alt="">
+                <div><h2 style="color:white;margin-top: 15px;">JavaScript</h2></div></div>
         </div>
     </div>
     
@@ -201,4 +211,4 @@
 
    </body>
 </html>
-<script src="index.js"></script>
+<!-- <script src="index.js"></script> -->
