Made the portfolio responsive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 dedicated to providing user-centric solutions.
                 Innovative, collaborative, team player driven to deliver
                 the best in any situation. Looking for a Software
-                Developer position in a product-based or servicebased company.</p>
+                Developer position in a product-based or service-based company.</p>
         </div>
     </div>
     <div id="skills">
@@ -102,8 +102,7 @@
                     team rankings</p>
                 <p>A collaborative project accomplished with a team of 6
                     members in 5 days</p>
-                <p style="display: inline; color:rgb(243, 169, 19); margin-left: -100px;">Tech Stack:</p>
-                <p style="display: inline">HTML | CSS | JavaScript</p>
+                    <p style=" color:rgb(243, 169, 19); ">Tech Stack: <span style="color: white">HTML | CSS | JavaScript<span/></p>
                 <div class="view">
                     <div>
                         <img src="./Images/Eye.png" alt="" id="e1">
@@ -124,8 +123,8 @@
                     free from nasty chemicals.</p>
                 <p>A collaborative project accomplished with a team of 5
                         members in 5 days</p>
-                <p style="display: inline; color:rgb(243, 169, 19); margin-left: -100px;">Tech Stack:</p>
-                <p style="display: inline">HTML | CSS | JavaScript</p>
+                <p style=" color:rgb(243, 169, 19); ">Tech Stack: <span style="color: white">HTML | CSS | JavaScript<span/></p>
+                
                 <div class="view">
                     <div>
                          <img src="./Images/Eye.png" alt="" id="e2">
@@ -151,7 +150,7 @@
         <h2>Contact Me</h2>
         <div>
             <div>
-                <img src="./Images/contact.png" alt="">
+                <img id="dummy" src="./Images/contact.png" alt="">
             </div>
             <div>
                  <form action="" name="google-sheet" id="form">
@@ -172,7 +171,7 @@
                   </div>
             </div>
         </div>
-        <p> Designed and built by Indrajit Paul, 2022 all rights reserved. </p>
+        <p> Designed and built by Indrajit Paul, © 2022 all rights reserved. </p>
     </div>
 
     <script
