added stats section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
         </div>
     </div>
 
+    <h2 id="stat">Stats</h2>
+    <div id="statbox">
+        <div><h1>1200+</h1> <p>Hours of coding</p></div>
+        <div><h1>300+</h1> <p>DSA problems</p></div>
+        <div><h1>2</h1> <p>Major projects</p></div>
+        <div><h1>250+</h1> <p>Git commits</p></div>
+        <div><h1>100+</h1> <p>Hours of soft skill training</p></div>
+    </div>
+
     <h2 id="gitcont">GitHub Contribution Calendar</h2>
     <div id="cal">
         <div class="calendar">
