Worked on responsiveness of stats section

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div><h1>300+</h1> <p>DSA problems</p></div>
         <div><h1>2</h1> <p>Major projects</p></div>
         <div><h1>250+</h1> <p>Git commits</p></div>
-        <div><h1>100+</h1> <p>Hours of soft skill training</p></div>
+        <div><h1>100+</h1> <p style="width: 60% ; text-align:center; margin-top:18px;">Hours of soft skill training</p></div>
     </div>
 
     <h2 id="gitcont">GitHub Contribution Calendar</h2>
