--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         // Use a proxy
         GitHubCalendar(".calendar", "ipaul1996", {
            proxy (username) {
-             return fetch(`https://your-proxy.com/github?user=${username}`)
+             return fetch(`https://your-proxy.com/github?user=${ipaul1996}`)
            }
         }).then(r => r.text())
     </script>
