Updated portfolio: Resolved some css issues, added updated resume, updated github contribution calender

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     team rankings</p>
                 <p>A collaborative project accomplished with a team of 6
                     members in 5 days</p>
-                    <p style=" color:rgb(243, 169, 19); ">Tech Stack: <span style="color: white">HTML | CSS | JavaScript<span/></p>
+                    <p style=" color:rgb(243, 169, 19); ">Tech Stack: <span style="color: white; background-color: black;">HTML | CSS | JavaScript<span/></p>
                 <div class="view">
                     <div>
                         <img src="./Images/Eye.png" alt="" id="e1">
@@ -123,7 +123,7 @@
                     free from nasty chemicals.</p>
                 <p>A collaborative project accomplished with a team of 5
                         members in 5 days</p>
-                <p style=" color:rgb(243, 169, 19); ">Tech Stack: <span style="color: white">HTML | CSS | JavaScript<span/></p>
+                <p style=" color:rgb(243, 169, 19); ">Tech Stack: <span style="color: white;  background-color: black;">HTML | CSS | JavaScript<span/></p>
                 
                 <div class="view">
                     <div>
@@ -143,7 +143,7 @@
         <div><h1>1200+</h1> <p>Hours of coding</p></div>
         <div><h1>300+</h1> <p>DSA problems</p></div>
         <div><h1>2</h1> <p>Major projects</p></div>
-        <div><h1>250+</h1> <p>Git commits</p></div>
+        <div><h1>300+</h1> <p>Git commits</p></div>
         <div><h1>100+</h1> <p style="width: 60% ; text-align:center; margin-top:18px;">Hours of soft skill training</p></div>
     </div>
 
