added hamburger for reponsive navbar

--- a/index.html
+++ b/index.html
@@ -21,13 +21,50 @@
             <div><h1> < Indrajit / > </h1></div>
         </div>
         <div>
-            <div id="home"> <p>HOME</p></div>
+            <div id="home"><p>HOME</p></div>
             <div id="ab"><p>ABOUT</p></div>
             <div id="sk"><p>SKILLS</p></div>
             <div id="pr"><p>PROJECTS</p></div>
             <div id="con"><p>CONTACT</p></div>
+            <div id="re"><p>RESUME</p></div>
         </div>
     </div>
+
+    <header>
+        <nav class="navbar">
+            <!-- <a href="#" class="nav-branding">DEV.</a> -->
+
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link" id="h">HOME</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link" id="a">ABOUT</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link" id="s">SKILLS</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link" id="p">PROJECTS</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" id="c">CONTACT</a>
+                </li>
+            </ul>
+
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+
+        </nav>
+    </header>
+
+
     <div id="about">
         <div>
             <h2>Hi 👋, my name is</h2>
