--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
            proxy (username) {
              return fetch(`https://your-proxy.com/github?user=${username}`)
            }
-        }).then(r => r.text())
+        }).then(rz => rz.text())
     </script>
 
     <script>
